src/parser/snapshots/protols__parser__docsymbol__test__test_proto2_document_symbols.snap
---
source: src/parser/docsymbol.rs
expression: symbols
---
- name: LegacyBook
  kind: 23
  tags:
    - 1
  range:
    start:
      line: 6
      character: 0
    end:
      line: 34
      character: 3
  selectionRange:
    start:
      line: 7
      character: 8
    end:
      line: 7
      character: 18
  children:
    - name: isbn
      detail: "required string (tag: 1)"
      kind: 8
      range:
        start:
          line: 8
          character: 2
        end:
          line: 9
          character: 27
      selectionRange:
        start:
          line: 9
          character: 18
        end:
          line: 9
          character: 22
      children: []
    - name: title
      detail: "optional string (tag: 2)"
      kind: 8
      range:
        start:
          line: 14
          character: 2
        end:
          line: 21
          character: 13
      selectionRange:
        start:
          line: 17
          character: 2
        end:
          line: 17
          character: 7
      children: []
    - name: edition_year
      detail: "optional int32 (tag: 3)"
      kind: 8
      tags:
        - 1
      range:
        start:
          line: 23
          character: 2
        end:
          line: 24
          character: 67
      selectionRange:
        start:
          line: 24
          character: 17
        end:
          line: 24
          character: 29
      children: []
    - name: legacy_metadata
      detail: "optional string (tag: 5)"
      kind: 8
      range:
        start:
          line: 32
          character: 4
        end:
          line: 32
          character: 40
      selectionRange:
        start:
          line: 32
          character: 20
        end:
          line: 32
          character: 35
      children: []
    - name: active
      detail: "optional bool (tag: 6)"
      kind: 8
      range:
        start:
          line: 33
          character: 4
        end:
          line: 33
          character: 29
      selectionRange:
        start:
          line: 33
          character: 18
        end:
          line: 33
          character: 24
      children: []
- name: BookStatus
  kind: 10
  tags:
    - 1
  range:
    start:
      line: 37
      character: 0
    end:
      line: 51
      character: 1
  selectionRange:
    start:
      line: 41
      character: 0
    end:
      line: 41
      character: 10
  children:
    - name: AVAILABLE
      detail: "value: 0"
      kind: 22
      range:
        start:
          line: 45
          character: 2
        end:
          line: 46
          character: 16
      selectionRange:
        start:
          line: 46
          character: 2
        end:
          line: 46
          character: 11
      children: []
    - name: BORROWED
      detail: "value: 1"
      kind: 22
      range:
        start:
          line: 47
          character: 2
        end:
          line: 48
          character: 15
      selectionRange:
        start:
          line: 48
          character: 2
        end:
          line: 48
          character: 10
      children: []
    - name: ARCHIVED
      detail: "value: 2"
      kind: 22
      tags:
        - 1
      range:
        start:
          line: 49
          character: 2
        end:
          line: 50
          character: 58
      selectionRange:
        start:
          line: 50
          character: 2
        end:
          line: 50
          character: 10
      children: []
- name: LegacyCatalog
  kind: 11
  tags:
    - 1
  range:
    start:
      line: 53
      character: 0
    end:
      line: 77
      character: 1
  selectionRange:
    start:
      line: 54
      character: 8
    end:
      line: 54
      character: 21
  children:
    - name: GetBookByIsbn
      detail: IsbnQuery → LegacyBook
      kind: 6
      tags:
        - 1
      range:
        start:
          line: 57
          character: 2
        end:
          line: 69
          character: 3
      selectionRange:
        start:
          line: 59
          character: 2
        end:
          line: 59
          character: 15
      children: []
    - name: UpdateInventory
      detail: InventoryAction → stream InventoryStatus
      kind: 6
      range:
        start:
          line: 72
          character: 2
        end:
          line: 76
          character: 3
      selectionRange:
        start:
          line: 73
          character: 6
        end:
          line: 73
          character: 21
      children: []
- name: IsbnQuery
  kind: 23
  range:
    start:
      line: 78
      character: 0
    end:
      line: 86
      character: 1
  selectionRange:
    start:
      line: 78
      character: 8
    end:
      line: 78
      character: 17
  children:
    - name: query_id
      detail: "required sint32 (tag: 1)"
      kind: 8
      range:
        start:
          line: 79
          character: 2
        end:
          line: 80
          character: 31
      selectionRange:
        start:
          line: 80
          character: 18
        end:
          line: 80
          character: 26
      children: []
    - name: raw_isbn
      detail: "required string (tag: 2)"
      kind: 8
      range:
        start:
          line: 81
          character: 2
        end:
          line: 81
          character: 31
      selectionRange:
        start:
          line: 81
          character: 18
        end:
          line: 81
          character: 26
      children: []
- name: InventoryAction
  kind: 23
  range:
    start:
      line: 88
      character: 0
    end:
      line: 96
      character: 1
  selectionRange:
    start:
      line: 88
      character: 8
    end:
      line: 88
      character: 23
  children:
    - name: action_id
      detail: "required fixed64 (tag: 1)"
      kind: 8
      range:
        start:
          line: 89
          character: 2
        end:
          line: 89
          character: 33
      selectionRange:
        start:
          line: 89
          character: 19
        end:
          line: 89
          character: 28
      children: []
    - name: modification_payload
      detail: "map<string, sfixed32> (tag: 2)"
      kind: 8
      range:
        start:
          line: 90
          character: 2
        end:
          line: 94
          character: 27
      selectionRange:
        start:
          line: 94
          character: 2
        end:
          line: 94
          character: 22
      children: []
    - name: type
      detail: "ExternalType (tag: 3)"
      kind: 8
      range:
        start:
          line: 95
          character: 2
        end:
          line: 95
          character: 24
      selectionRange:
        start:
          line: 95
          character: 15
        end:
          line: 95
          character: 19
      children: []
- name: InventoryStatus
  kind: 23
  range:
    start:
      line: 98
      character: 0
    end:
      line: 102
      character: 1
  selectionRange:
    start:
      line: 98
      character: 8
    end:
      line: 98
      character: 23
  children:
    - name: success
      detail: "required bool (tag: 1)"
      kind: 8
      range:
        start:
          line: 99
          character: 2
        end:
          line: 99
          character: 28
      selectionRange:
        start:
          line: 99
          character: 16
        end:
          line: 99
          character: 23
      children: []
    - name: current_status
      detail: "optional BookStatus (tag: 2)"
      kind: 8
      range:
        start:
          line: 100
          character: 2
        end:
          line: 101
          character: 63
      selectionRange:
        start:
          line: 101
          character: 22
        end:
          line: 101
          character: 36
      children: []
- name: LikesService
  kind: 11
  range:
    start:
      line: 103
      character: 0
    end:
      line: 128
      character: 1
  selectionRange:
    start:
      line: 104
      character: 8
    end:
      line: 104
      character: 20
  children:
    - name: LikeBooks
      detail: stream LegacyBook → google.protobuf.Empty
      kind: 6
      range:
        start:
          line: 105
          character: 2
        end:
          line: 127
          character: 67
      selectionRange:
        start:
          line: 127
          character: 6
        end:
          line: 127
          character: 15
      children: []
